update css to fix mathjax previously, the `*` was adding line spacing and margins to everything which was messing up mathjax

--- a/css/common.css
+++ b/css/common.css
@@ -304,8 +304,13 @@ figcaption {
   text-align: center; }
 
 blockquote {
-  font-style: italic;
-  padding-left: 1.4375rem; }
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  padding: 0.5em 10px;
+}
+blockquote * {
+  margin-bottom: 0;
+}
 
 cite {
   font-style: normal; }
@@ -1018,6 +1023,14 @@ h1 a:link, h1 a:visited, h1 a:hover, h1 a:visited:hover, h1 a:visited {
   position: absolute;
   top: 20px;
   right: 20px; }
+
+/* MathJax
+   ========================================================================== */
+
+.mjx-chtml * {
+  line-height: 0;
+  margin: 0;
+}
 
 /* Code syntax highlighting
    ========================================================================== */
